--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peerjs-room",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This is WebRTC room system based on PeerJS.",
   "main": "dist/main.js",
   "source": "src/index.ts",
@@ -10,13 +10,11 @@
     "start": "parcel --no-cache",
     "prebuild": "rimraf dist",
     "build": "parcel build --no-cache",
-    "local": "npm run build && npm link",
-    "postinstall": "npm run build"
+    "local": "npm run build && npm link"
   },
   "author": "Isirode",
   "license": "SEE LICENSE IN COPYING",
   "dependencies": {
-    "@parcel/transformer-typescript-tsc": "2.8.3",
     "emittery": "^1.0.1",
     "iterative": "^1.9.2",
     "peerjs": "^1.3.3",
@@ -25,6 +23,7 @@
   "devDependencies": {
     "@parcel/packager-ts": "2.8.3",
     "@parcel/transformer-typescript-types": "2.8.3",
+    "@parcel/transformer-typescript-tsc": "2.8.3",
     "@types/node": "20.1.4",
     "@types/jest": "^29.4.0",
     "events": "3.3.0",
