--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "peerjs-room",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "This is WebRTC room system based on PeerJS.",
   "main": "dist/main.js",
   "source": "src/index.ts",
   "types": "dist/types.d.ts",
   "scripts": {
+    "doInstall": "npm install",
     "test": "jest --config jest.config.js",
     "start": "parcel --no-cache",
     "prebuild": "rimraf dist",
     "build": "parcel build --no-cache",
-    "local": "npm run build && npm link"
+    "local": "npm run build && npm link",
+    "prepack": "npm run build",
+    "pack": "npm pack"
   },
   "author": "Isirode",
   "license": "SEE LICENSE IN COPYING",
@@ -18,7 +21,9 @@
     "emittery": "^1.0.1",
     "iterative": "^1.9.2",
     "peerjs": "^1.3.3",
-    "pure-rand": "^6.0.2"
+    "peerjs-request-response": "https://github.com/isirode/peerjs-request-response/releases/download/1.5.0/peerjs-request-response-1.5.0.tgz",
+    "pure-rand": "^6.0.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@parcel/packager-ts": "2.8.3",
