--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peerjs-room",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "description": "This is WebRTC room system based on PeerJS.",
   "main": "dist/main.js",
   "source": "src/index.ts",
@@ -18,12 +18,12 @@
   "author": "Isirode",
   "license": "SEE LICENSE IN COPYING",
   "dependencies": {
-    "emittery": "^1.0.1",
-    "iterative": "^1.9.2",
-    "peerjs": "^1.3.3",
-    "peerjs-request-response": "https://github.com/isirode/peerjs-request-response/releases/download/1.5.0/peerjs-request-response-1.5.0.tgz",
-    "pure-rand": "^6.0.2",
-    "uuid": "^9.0.0"
+    "emittery": "1.0.1",
+    "iterative": "1.9.2",
+    "peerjs": "1.3.2",
+    "peerjs-request-response": "https://github.com/isirode/peerjs-request-response/releases/download/1.5.2/peerjs-request-response-1.5.2.tgz",
+    "pure-rand": "6.0.2",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
     "@parcel/packager-ts": "2.8.3",
